# journal-watcher

./: .gitignore  Cargo.toml  LICENSE.md  README.md  complicated.yaml
examples/: README.md  test_patterns.json  test_patterns.yaml
src/: main.rs  patterns.rs
