[package]
name = "journal-watcher"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
nickel = "*"
sled = "0.34.6"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0.59"
serde_cbor = "0.11.1"
regex = "1.5.4"
chrono = "0.4"
dirs = "3.0.2"

